--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -14,29 +14,45 @@
 
       /*----- Start of Aboutme component media query----- */
     }
+
     .about-container {
       flex-wrap: wrap;
       .rectangle1,
       .rectangle2 {
-        display: none;
+        width:250px ;
+        height: 430px;
+        left: 3rem;
+      
+      }
+      .rectangle1 {
+        border: 5px solid #b68a2352;
+        margin-left: 30px; //Add some spacing between the rectangles
+      }
+      .rectangle2 {
+        border: 5px solid #eaeae8;
+        margin-top: -15px;
+        margin-left: -5px; /* Add some spacing between the rectangles */
       }
       .about-image {
         width: 300px;
         height: 400px;
-        border: 6px solid #b68a2352;
+       // border: 6px solid #b68a2352;
       }
       section {
         gap: 0;
         max-width: 100vw;
-        padding-top: 0;
+        text-align: center;
+      
         h2 {
           font-size: 1.5rem;
           margin-bottom: 0;
+          margin-top: 2rem;
+          padding: 1rem;
         }
         p {
           font-size: 1rem;
-          width: 100%;
-          margin-bottom: 0;
+          width: 100vw;
+          margin-bottom: 1rem;
         }
       }
       /*----- End of Aboutme component media query----- */
@@ -73,8 +89,13 @@
     }
   }
 
-  /* ++++++++++ Media Query for Tablet screen with min 600px and max 1023px  ++++++++++ */
-  @media (min-width: $tablet-screen-min) and (max-width: $tablet-screen-max) {
+ }
+
+
+
+ /* ++++++++++ Media Query for Tablet screen with min 600px and max 1023px  ++++++++++ */
+
+@media (min-width: $tablet-screen-min) and (max-width: $tablet-screen-max) {
     .app {
       /*----- Start of Navbar component media query----- */
       .navbar-container {
@@ -124,21 +145,30 @@
 
       /*----- Start of Aboutme component media query----- */
       .about-container {
-
+        display: flex;
+        flex-direction: column;
         .about-image {
-          width: 300px;
+          width: 350px;
           height: 500px;
         }
         .rectangle1,
         .rectangle2 {
-          width: 300px;
+          width: 350px;
           height: 530px;
         }
-        section{
+        .rectangle1 {
+          border: 10px solid #b68a2352;
+
+        }
+        .rectangle2 {
+          border: 10px solid #eaeae8;
+        
+        }
+        section{text-align: center;
           max-width: 100vw;
           gap: 0;
           p{
-          max-width: 100vw;
+          max-width: 80vw;
         }
         }
         
@@ -177,8 +207,10 @@
     }
   }
 
+
   /* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
-  @media (min-width: $desktop) {
+
+ @media (min-width: $desktop) {
     .app {
       /*----- Start of Navbar component media query----- */
       .navbar-container {
@@ -291,7 +323,9 @@
         about-image {
           width: 400px;
           height: 600px;
+
         }
+
       
        
       }
@@ -328,4 +362,3 @@
       /*----- Start of Footer component media query----- */
     }
   }
-}
