--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -123,74 +123,73 @@
   }
 } */
 .hero-container {
-  .hero{ 
+  .hero {
     display: flex;
-/*     justify-content: space-between;
- */     flex-wrap: wrap; 
-  background: linear-gradient(
-    360deg,
-    rgba(255, 255, 255, 0) 50%,
-    rgba(209, 204, 204, 0.445) 50%
-
-  );
-  .col1{
-    flex-basis: 30%;
-    margin-bottom: 28rem;
-           margin-left: 18rem;
-           margin-top: 1rem;
-     z-index:1;
-    h1 {
-      @include yoga;
-      font-weight: 300;
-      font-size: 15rem;
-      color: rgba(29, 28, 26, 0.805);
-/* 
+    /*     justify-content: space-between;
+ */
+    flex-wrap: wrap;
+    background: linear-gradient(
+      360deg,
+      rgba(255, 255, 255, 0) 50%,
+      rgba(209, 204, 204, 0.445) 50%
+    );
+    .col1 {
+      flex-basis: 30%;
+      margin-bottom: 28rem;
+      margin-left: 18rem;
+      margin-top: 1rem;
+      z-index: 1;
+      h1 {
+        @include yoga;
+        font-weight: 300;
+        font-size: 15rem;
+        color: rgba(29, 28, 26, 0.805);
+        /* 
       left: 15rem;
       top: 8rem; */
-      z-index: 2; 
-    }
-    h2 {
-      @include logo-font-style;
-      font-family: "MoonDance-Regular";
-      font-size: 4rem;
-      /*  *//*  top: 28rem;
+        z-index: 2;
+      }
+      h2 {
+        @include logo-font-style;
+        font-family: "MoonDance-Regular";
+        font-size: 4rem;
+        /*  */ /*  top: 28rem;
       left: 18rem; */
-
+      }
     }
-  }
-   .col2{
-    flex-basis: 50%;
-    position: relative;
-    display: flex;
-    align-items: center; 
-              margin-left: -8rem;
+    .col2 {
+      flex-basis: 50%;
+      position: relative;
+      display: flex;
+      align-items: center;
+      margin-left: -8rem;
 
-    .img{width: 45rem;
-      height: 28rem;
-       /* position: absolute;
+      .img {
+        width: 45rem;
+        height: 28rem;
+        /* position: absolute;
       right:20rem;
-      top:12rem;  */ 
-      z-index: 1;}
-    .ball{
-      width: 38rem;
-      height: 38rem;
-      
-      position: absolute;
-      right: 0;
-      left:0;
-      background-color: #b68a23;
-      border-radius: 50%;
-/*       border: #e4e4e48d 2rem solid;
- */     /*  
+      top:12rem;  */
+        z-index: 1;
+      }
+      .ball {
+        width: 38rem;
+        height: 38rem;
+
+        position: absolute;
+        right: 0;
+        left: 0;
+        background-color: #b68a23;
+        border-radius: 50%;
+        /*       border: #e4e4e48d 2rem solid;
+ */ /*  
        right:15rem;
       top:8rem;  */
-       transform: translateX(150px);
+        transform: translateX(150px);
         z-index: 0;
-
+      }
     }
-   }
   }
-  
 }
 
 /* ++++++++++ End of Hero Component style sheet ++++++++++ */
@@ -610,7 +609,7 @@
     .contact-img {
       margin: 1.6rem;
       width: 35%;
-      background-image: url("../assets//images/contact/yogaPause.jpg");
+      background-image: url("../assets//images/contact/contact.png");
       background-position: center;
       background-size: cover;
     }
