media query fixed

--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -150,6 +150,7 @@
         .about-image {
           width: 350px;
           height: 500px;
+          margin-left: 0;
         }
         .rectangle1,
         .rectangle2 {
