contact-img added!

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -532,9 +532,10 @@
     }
 
     .contact-img {
-      margin: 1.6rem;
-      width: 35%;
-      background-image: url("../assets//images/contact/yogaPause.jpg");
+      margin: 1.5rem;
+      width: 30%;
+      
+      background-image: url("../assets//images/contact/contact.png");
       background-position: center;
       background-size: cover;
     }
