--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -86,6 +86,8 @@
     /*----- Start of Contact component media query----- */
     .contact-container {
       width: 99%;
+      border: 2px solid red;
+     
 
       .contact-sub-container {
         .form-container {
@@ -189,7 +191,7 @@
     /*----- Start of Contact component media query----- */
     .contact-container {
       width: 99%;
-
+      
       .contact-sub-container {
         .form-container {
           width: 100%;
@@ -351,6 +353,7 @@
     /*----- Start of Contact component media query----- */
     .contact-container {
       width: 99%;
+     
 
       .contact-sub-container {
         .form-container {
