--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -165,9 +165,14 @@
           border: 10px solid #eaeae8;
         
         }
-        section{text-align: center;
+        section{
+          text-align: center;
           max-width: 100vw;
           gap: 0;
+          h2{
+            margin-top: 2rem;
+            font-size: 2.5rem;
+          }
           p{
           max-width: 80vw;
         }
