--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -488,6 +488,7 @@ h2 {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        text-align: center;
       }
 
       h6 {
