--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -72,7 +72,7 @@
 }
 /* ++++++++++ End of Navbar Component style sheet ++++++++++ */
 
-/* ++++++++++ Start of Hero Component style sheet ++++++++++ */
+/* Backup code for the hero component */
 /* .hero-container {
   width: 100%;
   height: 100vh;
@@ -122,6 +122,8 @@
     }
   }
 } */
+
+/* ++++++++++ Start of Hero Component style sheet ++++++++++ */
 .hero-container {
   .hero {
     display: flex;
