--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -162,8 +162,9 @@
       position: relative;
       display: flex;
       align-items: center;
-      margin-left: -8rem;
-
+      margin-left: 0rem;
+/*       margin-left: -8rem;
+ */
       .img {
         width: 45rem;
         height: 28rem;
