change the color of frame in aboutme

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -229,7 +229,7 @@
     }
 
     .rectangle1 {
-      border: 15px solid #f4e4d5;
+      border: 15px solid #b68a2350;
       margin-left: 60px; //Add some spacing between the rectangles
     }
     .rectangle2 {
