new new changes has been made the the service component

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -312,9 +312,8 @@
         justify-content: center;
         padding: 4.9rem;
         border-radius: 50%;
-        box-shadow: 10px 22px 40px #0000 5%;
-
-        /*     box-shadow: 20px 20px 60px #d6d6d6, -20px -20px 60px #ffffff; */
+        /*       box-shadow: 10px 22px 40px #0000 5%; */
+        box-shadow: 20px 20px 60px #d6d6d6, -20px -20px 60px #ffffff;
 
         button {
           display: flex;
@@ -339,15 +338,6 @@
               height: 6rem;
               width: 6rem;
             }
-          }
-          .icon::before {
-            content: "";
-            position: absolute;
-            inset: 0px;
-            box-shadow: 10px 22px 40px #0000 5%;
-            border-radius: 50%;
-            transform: scale(0);
-            transition: 0.5s;
           }
         }
       }
