--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -59,8 +59,46 @@
     /*----- End of Hero component media query----- */
 
     /*----- Start of Aboutme component media query----- */
-    .about-container {
-    }
+   .about-container {
+      flex-wrap: wrap;
+      .rectangle1,
+      .rectangle2 {
+        width:250px ;
+        height: 430px;
+        left: 3rem;
+      
+      }
+      .rectangle1 {
+        border: 5px solid #b68a2352;
+        margin-left: 30px; //Add some spacing between the rectangles
+      }
+      .rectangle2 {
+        border: 5px solid #eaeae8;
+        margin-top: -15px;
+        margin-left: -5px; /* Add some spacing between the rectangles */
+      }
+      .about-image {
+        width: 300px;
+        height: 400px;
+       // border: 6px solid #b68a2352;
+      }
+      section {
+        gap: 0;
+        max-width: 100vw;
+        text-align: center;
+      
+        h2 {
+          font-size: 1.5rem;
+          margin-bottom: 0;
+          margin-top: 2rem;
+          padding: 1rem;
+        }
+        p {
+          font-size: 1rem;
+          width: 100vw;
+          margin-bottom: 1rem;
+        }
+      }
     /*----- End of Aboutme component media query----- */
 
     /*----- Start of Service component media query----- */
@@ -123,8 +161,41 @@
     /*----- End of Hero component media query----- */
 
     /*----- Start of Aboutme component media query----- */
-    .about-container {
-    }
+   .about-container {
+        display: flex;
+        flex-direction: column;
+        .about-image {
+          width: 300px;
+          height: 450px;
+          margin-left: 0;
+        }
+        .rectangle1,
+        .rectangle2 {
+          width: 350px;
+          height: 530px;
+        }
+        .rectangle1 {
+          border: 10px solid #b68a2352;
+
+        }
+        .rectangle2 {
+          border: 10px solid #eaeae8;
+        
+        }
+        section{
+          text-align: center;
+          max-width: 100vw;
+          gap: 0;
+          h2{
+            margin-top: 2rem;
+            font-size: 2.5rem;
+          }
+          p{
+          max-width: 80vw;
+        }
+        }
+        
+      }
     /*----- End of Aboutme component media query----- */
 
     /*----- Start of Service component media query----- */
@@ -217,8 +288,14 @@
     /*----- End of Hero component media query----- */
 
     /*----- Start of Aboutme component media query----- */
-    .about-container {
-    }
+   .about-container {
+
+        about-image {
+          width: 400px;
+          height: 600px;
+
+        }
+
     /*----- End of Aboutme component media query----- */
 
     /*----- Start of Service component media query----- */
@@ -283,4 +360,6 @@
       }
     }
   }
+}
+}
 }
