--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -596,6 +596,7 @@ h2 {
       h2 {
         @include heading-2-style;
         padding: 1.5rem 0;
+        margin-right: 15rem;
       }
 
       h3 {
