--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -490,6 +490,12 @@
 // Top-level styles
 
 .demo {
+  h2 {
+    @include heading-2-style;
+    margin-bottom: 2rem; // Assuming you want the margin at the top level as well.
+    text-align: center;
+    padding: 3rem;
+  }
   @include section-padding-style;
   
   h2 {
