--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,286 +1,340 @@
-/* ++++++++++ Media Query for Phone screen with max width of 599px ++++++++++ */
-@media (max-width: $phone-screen) {
+/* ++++++++++ Media Query for Phone screen max width 360px ++++++++++ */
+@media (max-width: 360px) {
   .app {
-    /*----- Start of Navbar component media query----- */
-    .navbar-container {
-    }
-    /*----- End of Navbar component media query----- */
-
-    /*----- Start of Hero component media query----- */
-    /* .hero-container {
-      width: 100vw;
-      height: 100vh;
-      padding: 0 8rem;
-
-      background: linear-gradient(
-        360deg,
-        rgba(255, 255, 255, 0) 50%,
-        rgba(209, 204, 204, 0.445) 50%
-      );
-      .hero-heading {
-        h1 {
-          @include yoga;
-          font-weight: 300;
-          font-size: 1rem;
-          color: rgba(29, 28, 26, 0.805);
-          position: absolute;
-          left: 13rem;
-          top: 8rem;
-          z-index: 2;
-        }
-        h2 {
-          @include logo-font-style;
-          font-family: "MoonDance-Regular";
-          font-size: 4.5rem;
-          top: 28rem;
-          left: 18rem;
-          position: absolute;
-        }
-      }
-      .ball {
-        width: 10rem;
-        height: 10rem;
-        background-color: #b68a23;
-        border-radius: 50%;
-        border: #e4e4e48d 2rem solid;
-        position: relative;
-        left: 40rem;
-        top: 6rem;
-
-        .gif {
-          width: 92rem;
-          height: 60rem;
-          position: absolute;
-          right: -22rem;
-          bottom: -5rem;
-        }
-      }
-    } */
-    /*----- End of Hero component media query----- */
-
-    /*----- Start of Aboutme component media query----- */
-    .about-container {
-    }
-    /*----- End of Aboutme component media query----- */
-
-    /*----- Start of Service component media query----- */
     .service-container {
-    }
-    /*----- End of Service component media query----- */
-
-    /*----- Start of Feedback component media query----- */
-    .feedback-container {
-    }
-    /*----- End of Feedback component media query----- */
-
-    /*----- Start of Demo component media query----- */
-    .demo-container {
-    }
-    /*----- End of Demo component media query----- */
-
-    /*----- Start of Contact component media query----- */
-    .contact-container {
       width: 99%;
 
-      .contact-sub-container {
-        .form-container {
-          width: 100%;
+      /* Heading section  */
+      .header-container {
+        h2 {
+          font-size: 1.6rem;
+        }
+      }
 
-          h2 {
-            font-size: 2rem;
-          }
-          h3 {
-            font-size: 1.5rem;
+      /* Tab container  */
+      .tabs {
+        [class^="tab"],
+        [class*="tab"] {
+          label {
+            font-size: 1.1rem;
+            padding: 0.3rem;
           }
         }
-        .contact-img {
-          display: none;
+      }
+
+      /* Service section */
+      .service-section {
+        .card-content-container {
+          /* Content container */
+          .content-container {
+            display: none;
+          }
+
+          /* Cards container */
+          .cards-container {
+            flex-direction: column;
+
+            /* Cards */
+            .card-basic,
+            .card-premium,
+            .card-standard {
+              width: 85%;
+              margin-right: 0;
+
+              /* Cards header */
+              .card-header {
+                height: 4rem;
+              }
+
+              /* Cards body */
+              .card-body {
+                padding: 0.5rem 0;
+
+                /* card body heading 3 */
+                p {
+                  h3 {
+                    font-size: 1rem;
+                    padding: 0.4rem;
+                  }
+                }
+
+                /* Card element container */
+                .card-element-container {
+                  font-size: 0.9rem;
+                }
+
+                /* cards button */
+                .btn {
+                  padding: 0.5rem;
+                  font-size: 0.8rem;
+                  border-radius: 0.5rem;
+                }
+              }
+            }
+          }
         }
       }
     }
-    /*----- End of Contact component media query----- */
-
-    /*----- Start of Footer component media query----- */
-    footer {
-    }
-    /*----- Start of Footer component media query----- */
   }
 }
 
-/* ++++++++++ Media Query for Tablet screen with min 600px and max 1023px  ++++++++++ */
-@media (min-width: $tablet-screen-min) and (max-width: $tablet-screen-max) {
+/* ++++++++++ Media Query for Phone screen between 361 and 599px ++++++++++ */
+@media (min-width: 361px) and (max-width: $phone-screen) {
   .app {
-    /*----- Start of Navbar component media query----- */
-    .navbar-container {
-    }
-    /*----- End of Navbar component media query----- */
-
-    /*----- Start of Hero component media query----- */
-    .hero-container {
-      
-    
-    }
-    /*----- End of Hero component media query----- */
-
-    /*----- Start of Aboutme component media query----- */
-    .about-container {
-    }
-    /*----- End of Aboutme component media query----- */
-
     /*----- Start of Service component media query----- */
     .service-container {
-    }
-    /*----- End of Service component media query----- */
+      width: 99%;
+      border: 1px solid green;
 
-    /*----- Start of Feedback component media query----- */
-    .feedback-container {
-    }
-    /*----- End of Feedback component media query----- */
-
-    /*----- Start of Demo component media query----- */
-    .demo-container {
-      // Mobile devices
-      @media (max-width: 480px) {
-        .demo-container {
-          flex-direction: column;
-        }
-
-        .demo-session-description,
-        .booking-info-container {
-          width: 100%;
-        }
-
-        h2 {
-          font-size: 1.5rem;
-        }
-
-        .booking-info-container h6 {
-          font-size: 1.2rem;
-        }
-      }
-
-      // Tablet devices
-      @media (min-width: 481px) and (max-width: 768px) {
-        .demo-container {
-          flex-direction: column;
-        }
-
-        .demo-session-description,
-        .booking-info-container {
-          width: 80%;
-          margin: 0 auto;
-        }
-
+      /* Heading section  */
+      .header-container {
         h2 {
           font-size: 2rem;
         }
+      }
 
-        .booking-info-container h6 {
-          font-size: 1.5rem;
+      /* Tab container  */
+      .tabs {
+        [class^="tab"],
+        [class*="tab"] {
+          label {
+            font-size: 1.3rem;
+            padding: 0.8rem;
+          }
         }
       }
 
-      // Desktop devices
-      @media (min-width: 769px) and (max-width: 1024px) {
-        .demo-session-description,
-        .booking-info-container {
-          width: 70%;
-          margin: 0 auto;
+      /* Service section */
+      .service-section {
+        .card-content-container {
+          /* Content container */
+          .content-container {
+            display: none;
+          }
+
+          /* Cards container */
+          .cards-container {
+            flex-direction: column;
+            /*    border: 1px solid blue; */
+
+            /* Cards */
+            .card-basic,
+            .card-premium,
+            .card-standard {
+              width: 55%;
+              margin-right: 0;
+
+              /* Cards header */
+              .card-header {
+                height: 4rem;
+              }
+
+              /* Cards body */
+              .card-body {
+                padding: 0.5rem 0;
+
+                /* card body heading 3 */
+                p {
+                  h3 {
+                    font-size: 1rem;
+                    padding: 0.4rem;
+                  }
+                }
+
+                /* Card element container */
+                .card-element-container {
+                  font-size: 0.9rem;
+                }
+
+                /* cards button */
+                .btn {
+                  padding: 0.5rem;
+                  font-size: 0.8rem;
+                  border-radius: 0.5rem;
+                }
+              }
+            }
+          }
         }
       }
     }
-    /*----- End of Demo component media query----- */
-
-    /*----- Start of Contact component media query----- */
-    .contact-container {
-    }
-    /*----- End of Contact component media query----- */
-
-    /*----- Start of Footer component media query----- */
-    footer {
-    }
-    /*----- Start of Footer component media query----- */
+    /*----- End of Service component media query----- */
   }
 }
 
-/* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
-@media (min-width: $desktop) {
+/* ++++++++++ Media Query for Tablet screen with min 600px and max 800px  ++++++++++ */
+@media (min-width: $tablet-screen-min) and (max-width: 800px) {
   .app {
-    /*----- Start of Navbar component media query----- */
-    .navbar-container {
-    }
-    /*----- End of Navbar component media query----- */
-
-    /*----- Start of Hero component media query----- */
-    .hero-container {
-    }
-    /*----- End of Hero component media query----- */
-
-    /*----- Start of Aboutme component media query----- */
-    .about-container {
-    }
-    /*----- End of Aboutme component media query----- */
-
     /*----- Start of Service component media query----- */
     .service-container {
-    }
-    /*----- End of Service component media query----- */
+      width: 99%;
 
-    /*----- Start of Gallery component media query----- */
-    .gallery-container {
-    }
-    /*----- End of Gallery component media query----- */
-
-    /*----- Start of Feedback component media query----- */
-    .feedback-container {
-    }
-    /*----- End of Feedback component media query----- */
-
-    /*----- Start of Demo component media query----- */
-    .demo-container {
-    }
-    /*----- End of Demo component media query----- */
-
-    /*----- Start of Contact component media query----- */
-    .contact-container {
-    }
-    /*----- End of Contact component media query----- */
-
-    /*----- Start of Footer component media query----- */
-    footer {
-    }
-    /*----- Start of Footer component media query----- */
-  
-}
-}
-@media (min-width: 1300px) and (max-width: 1600px) {
-  .app {
-    .hero-container {
-      .hero {
-        .col1 {
-          margin-bottom: 20rem;
-          margin-top: 0.5rem;
-          margin-left: 12rem;
-          h1 {
-            font-size: 15rem;
-          }
-          h2 {
-            font-size: 4rem;
-          }
+      /* Heading section  */
+      .header-container {
+        h2 {
+          font-size: 2.5rem;
         }
-        .col2 {
-          margin-left: -1rem;
-         .ball {
-            width: 32rem;
-            height: 32rem;
-          }
-          .img {
-            width: 28rem;
-            height: 20rem;
-            margin-right: 4rem;
+      }
+
+      /* Tab container  */
+      .tabs {
+        [class^="tab"],
+        [class*="tab"] {
+          label {
+            font-size: 1.6rem;
+            padding: 1rem;
           }
         }
       }
+
+      /* Service section */
+      .service-section {
+        .card-content-container {
+          /* Content container */
+          .content-container {
+            display: none;
+          }
+
+          /* Cards container */
+          .cards-container {
+            flex-direction: column;
+
+            /* Cards */
+            .card-basic,
+            .card-premium,
+            .card-standard {
+              width: 60%;
+              margin-right: 0;
+
+              /* Cards header */
+              .card-header {
+                height: 5rem;
+              }
+
+              /* Cards body */
+              .card-body {
+                padding: 1.5rem 0;
+
+                /* card body heading 3 */
+                p {
+                  h3 {
+                    font-size: 1.4rem;
+                    padding: 0.4rem;
+                  }
+                }
+
+                /* Card element container */
+                .card-element-container {
+                  font-size: 1.2rem;
+                }
+
+                /* cards button */
+                .btn {
+                  padding: 0.6rem 0.8rem;
+                  font-size: 1.1rem;
+                  border-radius: 0.5rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    /*----- End of Service component media query----- */
+  }
+}
+
+/* ++++++++++ Media Query for Tablet screen with min 801px and max 1023px  ++++++++++ */
+@media (min-width: 801px) and (max-width: $tablet-screen-max) {
+  .app {
+    .service-container {
+      width: 99%;
+
+      /* Heading section  */
+      .header-container {
+        h2 {
+          font-size: 2.5rem;
+        }
+      }
+
+      /* Tab container  */
+      .tabs {
+        [class^="tab"],
+        [class*="tab"] {
+          label {
+            font-size: 1.6rem;
+            padding: 1rem;
+          }
+        }
+      }
+
+      /* Service section */
+      .service-section {
+        .card-content-container {
+          /* Content container */
+          .content-container {
+            display: none;
+          }
+
+          /* Cards container */
+          .cards-container {
+            flex-direction: column;
+
+            /* Cards */
+            .card-basic,
+            .card-premium,
+            .card-standard {
+              width: 60%;
+              margin-right: 0;
+
+              /* Cards header */
+              .card-header {
+                height: 5rem;
+              }
+
+              /* Cards body */
+              .card-body {
+                padding: 1.5rem 0;
+
+                /* card body heading 3 */
+                p {
+                  h3 {
+                    font-size: 1.4rem;
+                    padding: 0.4rem;
+                  }
+                }
+
+                /* Card element container */
+                .card-element-container {
+                  font-size: 1.2rem;
+                }
+
+                /* cards button */
+                .btn {
+                  padding: 0.6rem 0.8rem;
+                  font-size: 1.1rem;
+                  border-radius: 0.5rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  /* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
+  @media (min-width: $desktop) {
+    .app {
+      /*----- Start of Navbar component media query----- */
+
+      /*----- Start of Service component media query----- */
+      .service-container {
+      }
+      /*----- End of Service component media query----- */
+    }
+  }
+  @media (min-width: 1300px) and (max-width: 1600px) {
+    .app {
     }
   }
 }
