--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -2,6 +2,7 @@
 @media (max-width: 360px) {
   .app {
     .service-container {
+      margin-top: 0;
       width: 99%;
 
       /* Heading section  */
@@ -83,8 +84,8 @@
   .app {
     /*----- Start of Service component media query----- */
     .service-container {
+      margin-top: 0;
       width: 99%;
-      border: 1px solid green;
 
       /* Heading section  */
       .header-container {
@@ -167,6 +168,7 @@
   .app {
     /*----- Start of Service component media query----- */
     .service-container {
+      margin-top: 0;
       width: 99%;
 
       /* Heading section  */
