--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -368,33 +368,151 @@
       }
       /*----- Start of Footer component media query----- */
     }
-  }
-  @media (min-width: 1300px) and (max-width: 1600px) {
-    .app {
-      .hero-container {
-        .hero {
-          .col1 {
-            margin-bottom: 20rem;
-            margin-top: 0.5rem;
-            margin-left: 12rem;
-            h1 {
-              font-size: 15rem;
-            }
-            h2 {
-              font-size: 4rem;
-            }
+  }}
+ /*----------- Hero Section ------------------*/
+
+ @media (min-width: 1150px) and (max-width: 1300px) {
+  .app {
+    .hero-container {
+      .hero {
+        .col1 {
+          margin-bottom: 20rem;
+          margin-top: 0.5rem;
+          margin-left: 150px;
+          h1 {
+            font-size: 14rem;
           }
-          .col2 {
-            margin-left: -1rem;
-            .ball {
-              width: 32rem;
-              height: 32rem;
-            }
-            .img {
-              width: 28rem;
-              height: 20rem;
-              margin-right: 4rem;
-            }
+          h2 {
+            font-size: 3rem;
+          }
+        }
+        .col2 {
+          margin-left: -10rem;
+          .ball {
+            width: 30rem;
+            height: 30rem;
+          }
+          .img {
+            width: 28rem;
+            height: 20rem;
+            margin-right: 4rem;
+          }
+        }    
+      }
+    }
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1150px) {
+  .app {
+    .hero-container {
+      .hero {
+        .col1 {
+          margin-bottom: 20rem;
+          margin-top: 0.5rem;
+          margin-left: 120px;
+          h1 {
+            font-size: 10rem;
+          }h2 {
+            font-size: 3rem;
+          }
+        }
+        .col2 {
+          margin-left: -10rem;
+          .ball {
+            width: 26rem;
+            height: 26rem;
+          }
+          .img {
+            width: 25rem;
+            height: 18rem;
+            margin-right: 4rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 500px) and (max-width: 900px) {
+  .app {
+    .hero-container { display: flex;
+      justify-content: center;
+
+      .hero { 
+        width:90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap:1rem;
+        flex-direction: column;
+        background: none;
+        .col1 {
+          width: 100%;
+
+           margin-left: 0;
+          margin-top: 0;
+          margin-bottom: 0;
+          order: 1;
+          h1 {
+          text-align: center;
+            font-size: 8rem;
+          }
+          h2 {          text-align: center;
+
+            font-size: 3rem;
+          }
+        } 
+        .col2 {
+          
+         position: relative;
+          order: 2;
+           margin-left: 0;
+        .ball {
+         
+            width: 18rem;
+            height: 18rem;       
+                  margin-left: 0;
+                  right: 10rem;
+                  transform: translateX(20px);
+
+           }
+          img {
+            width: 18rem;
+            height: 15rem;
+           /*   margin-left: 5rem; */
+            margin-top: 1rem; 
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 1300px) and (max-width: 1600px) {
+  .app {
+    .hero-container {
+      .hero {
+        .col1 {
+          margin-bottom: 20rem;
+          margin-top: 0.5rem;
+          margin-left: 12rem;
+          h1 {
+            font-size: 15rem;
+          }
+          h2 {
+            font-size: 4rem;
+          }
+        }
+        .col2 {
+          margin-left: -10rem;
+         .ball {
+            width: 32rem;
+            height: 32rem;
+          }
+          .img {
+            width: 28rem;
+            height: 20rem;
+            margin-right: 4rem;
           }
         }
       }
