--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -441,7 +441,8 @@
         /* Basic card header */
         .header-basic,
         .btn-basic {
-          background: #a27a1e;
+          /*  background: #a27a1e; */
+          background: #808080;
         }
 
         /* Standard card Header */
