--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -441,8 +441,7 @@
         /* Basic card header */
         .header-basic,
         .btn-basic {
-          /*  background: #a27a1e; */
-          background: #808080;
+          background: #a27a1e;
         }
 
         /* Standard card Header */
